name:                reverse-geocoding
version:             0.2.2
synopsis:            Simple reverse geocoding using OpenStreeMap
description:         Simple reverse geocoding using OpenStreeMap
homepage:            https://github.com/jcristovao/reverse-geocoding
license:             BSD3
license-file:        LICENSE
author:              João Cristóvão
maintainer:          jmacristovao@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    Data.Geolocation.Reverse.Types
                      Data.Geolocation.Reverse.Providers
                      Data.Geolocation.Reverse
  -- other-modules:      
  other-extensions:   OverloadedStrings
  build-depends:      base
                    , lens
                    , lens-aeson
                    , wreq
                    , aeson
                    , text
                    , iso3166-country-codes
  hs-source-dirs:     src
  default-language:   Haskell2010

source-repository head
  type: git
  location: https://github.com/jcristovao/reverse-geocoding
